--- a/DependencyAnalyzer2017/packages.config
+++ b/DependencyAnalyzer2017/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.14" targetFramework="net461" />
+  <package id="Microsoft.AnalysisServices.retail.amd64" version="19.36.0" targetFramework="net461" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="140.17265.0" targetFramework="net461" />
 </packages>
