--- a/DependencyAnalyzer2019/packages.config
+++ b/DependencyAnalyzer2019/packages.config
@@ -33,5 +33,5 @@
   <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net462" />
   <package id="System.Text.Json" version="4.6.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" requireReinstallation="true" />
 </packages>
